# agency-2026-claw

./: .env.example  .gitignore  AGENTS.md  DEMO_SCRIPT.md  DEPLOYMENT.md  Makefile  README.md  pyproject.toml
agency_claw/: __init__.py  brain.py  challenge_containers.py  challenge_contract.py  cli.py  correlate.py  dashboard.py  dataset.py  detectors.py  directdb.py  disconfirm.py  duck.py  execution_proof.py  hackathon.py  jsonio.py  judge_app.py  ledger.py  neotoma.py  paths.py  planner.py  public_export.py  resolution.py  reviewer.py  runner.py  skills.py  util.py  verify.py
config/: challenges.md  skills.json
docs/: actionable-state.md  architecture.md  plain-english.md  presentation-demo.md  public-repo.md
scripts/: bootstrap.sh  build-chart-data.py  create-demo-data.py  neotoma.sh  refresh-public-until-freeze.sh  reset-generated.sh  smoke-neotoma.sh  start-neotoma.sh  stop-neotoma.sh  sync-public.sh
scripts/agency-loops/: CORRECTION_PASS.md  FINDINGS.md  ITERATE.md  KNOWN-DATA-ISSUES-NOTES.md  PROCESS-LOG.md  README.md  STRUCTURE.md  VERIFIED_SCHEMA.md  correction-run.sh  correction-status.sh  generate_audit_report.py  launch-corrections.sh  orchestrate.sh  run-template.sh  status.sh  supervisor_prune.py
site/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js  server.js  sovereignty-dialogue.html  stories.html  trust.html  vite.config.js
site/challenges/: 01-zombie-recipients.html  02-ghost-capacity.html  (+9 more)
sovereignty-tracker/: README.md  manual-entries.jsonl  poll_local.py  tracker.py
web/: agency-loop-audit.html
(+38 files in other folders)
